--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,12 @@
       "sizes": "16x16"
     },
     {
+      "src": "images/512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+
+    {
       "src": "/favicon.ico",
       "type": "image/x-icon"
     }
